--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
 	"manifest_version": 2,
 	"app": {
 		"background": {
-			"scripts": ["background.js"]
+			"scripts": ["js/background.js"]
 		}
 	},
-	"icons": {"16": "calculator-16.png", "128": "calculator-128.png"}
+	"icons": {"128": "images/icon_128.png"}
 }
